# level-thumbnails-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  rustfmt.toml
frontend/: package-lock.json
frontend/src/: routes.ts  style.css
frontend/src/components/: Button.vue  Container.vue  Footer.vue  Header.vue  ImageDiffer.vue  LazyCounter.vue  LoadingCircle.vue  MosaicGrid.vue
frontend/src/managers/: session.ts
frontend/src/pages/: DashboardPage.vue  HomePage.vue  NotFoundPage.vue  PrivacyPage.vue  TermsPage.vue
frontend/src/pages/Dashboard/: Dashboard.vue  Pending.vue  Settings.vue
migrations/: 20250518101511_init.up.sql  20250624172559_bans.up.sql
src/: auth.rs  cache_controller.rs  database.rs  main.rs  util.rs
src/routes/: admin.rs  login.rs  mod.rs  thumbnail.rs  upload.rs  user.rs
