[package]
name = "level-thumbnails-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
image = "0.25.6"
webp = "0.3.0"
tower-http = { version = "0.6.4", features = ["cors", "fs"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.5" , features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.20", features = ["json"] }
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"